Cambio nombre fichero principal

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
         <div id="navigation-letters">S&D</div>
         <nav id="nav-list">
             <ul class="link-list">
-                <li class="items-list-top"><a class="links-top" href="maqueta.html">¡Bienvenidos!   </a></li>
+                <li class="items-list-top"><a class="links-top" href="index.html">¡Bienvenidos!   </a></li>
                 <li class="items-list-top"><a class="links-top" href="schedule.html">Horario ceremonia  </a></li>
                 <li class="items-list-top"><a class="links-top" href="location.html">¿Como llegó?   </a></li>
                 <li class="items-list-top"><a class="links-top" href="contact.html">Contáctanos</a></li>
