--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
         <nav id="nav-list">
             <ul class="link-list">
                 <li class="items-list-top"><a class="links-top" href="index.html">¡Bienvenidos!   </a></li>
-                <li class="items-list-top"><a class="links-top" href="schedule.html">Horario ceremonia  </a></li>
-                <li class="items-list-top"><a class="links-top" href="location.html">¿Como llegó?   </a></li>
+                <li class="items-list-top"><a class="links-top" href="schedule.html">Planning  </a></li>
+                <li class="items-list-top"><a class="links-top" href="location.html">¿Cómo llego?   </a></li>
                 <li class="items-list-top"><a class="links-top" href="contact.html">Contáctanos</a></li>
             </ul>
         </nav>
