--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    
+    <script src="./code/code.js"></script>
 </head>
 
 <body>
     <div id="navigation-bar">
         <div id="navigation-letters">S&D</div>
-        <nav id="nav-list">
+        <nav id="nav-list">            
             <ul class="link-list">
                 <li class="items-list-top"><a class="links-top" href="index.html">¡Bienvenidos!</a></li>
                 <li class="items-list-top"><a class="links-top" href="schedule.html">Planning</a></li>
@@ -25,6 +25,20 @@
                 <li class="items-list-top"><a class="links-top" href="contact.html">Contáctanos</a></li>
             </ul>
         </nav>
+        <button type="button" id="core-button" class="btn btn-default" data-toggle="collapse" data-target="#exCollapsingNavbar">&#9776;</button>
+        <div class="collapse" id="exCollapsingNavbar">
+            <div class="bg-inverse p-a-1">
+              <span>
+                <h3>
+                    <ul class="link-list-collapse">
+                        <li class="li-collapse"><a class="links-top" href="index.html">¡Bienvenidos!</a></li>
+                        <li class="li-collapse"><a class="links-top" href="schedule.html">Planning</a></li>
+                        <li class="li-collapse"><a class="links-top" href="location.html">¿Cómo llego?</a></li>
+                        <li class="li-collapse"><a class="links-top" href="contact.html">Contáctanos</a></li>
+                    </ul>
+                </h3>                
+            </div>
+          </div>
     </div>
     <div id="welcome">
         <div id="principal">
