added code if phone is rotated

--- a/location.html
+++ b/location.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    
     <div id="navigation-bar">
         <div id="navigation-letters">S&D</div>
         <nav id="nav-list">            
@@ -41,6 +42,13 @@
           </div>
     </div>
     <div id="principal">
+        <div id="location-left">
+            <button id="llevame-button" onclick="myNavFunc()">¡Llévame!</button>
+        </div>
+        
+        <div id="principal-right">
+            <img src="./images/capellania.jpg">
+        </div>
     </div>
 </body>
 
