--- a/location.html
+++ b/location.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>¡Bienvenidos! - Sandra &amp; Diego</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./stylesheet/maqueta.css">
-    <link rel="stylesheet" href="./stylesheet/movil.css">
+    <link rel="stylesheet" href="./stylesheet/base.css">
+    <link rel="stylesheet" href="./stylesheet/location.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -45,9 +45,17 @@
         <div id="location-left">
             <button id="llevame-button" onclick="myNavFunc()">¡Llévame!</button>
         </div>
+        <div id="texto-location">
+            <div class="texto-informacion">
+                Aldea Santillana
+            </div>
+            <div class="texto-descripcion">
+                <p>Se accede por la A-1 desvío en la salida nº 60 "La Cabrera - El Berrueco" hasta llegar a la localidad de El Berrueco, allí tomamos la M-127 dirección Cervera de Buitrago, a 4 Km de esta desviación, en el Km 9,200 de la M-127 se encuentra Aldea Santillana.</p>                
+            </div>
+        </div>
         
         <div id="principal-right">
-            <img src="./images/capellania.jpg">
+            <img src="./images/mapaSantillana.jpg">
         </div>
     </div>
 </body>
