--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>¡Bienvenidos! - Sandra &amp; Diego</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./stylesheet/maqueta.css">
+    <link rel="stylesheet" href="./stylesheet/base.css">
     <link rel="stylesheet" href="./stylesheet/movil.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     
