--- a/location.html
+++ b/location.html
@@ -43,8 +43,7 @@
     </div>
     <div id="principal">
         <div id="location-left">
-            <button id="llevame-button" onclick="myNavFunc()">¡Llévame!</button>
-        </div>
+            <button id="llevame-button" onclick="myNavFunc()">¡Llévame!</div>
         <div id="texto-location">
             <div class="texto-informacion">
                 Aldea Santillana
