--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
     <title>¡Bienvenidos! - Sandra &amp; Diego</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./stylesheet/base.css">
-    <link rel="stylesheet" href="./stylesheet/movil.css">
+    <link rel="stylesheet" href="./stylesheet/location.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
