first versión schedule and try contact whatsapp message

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
           </div>
     </div>
     <div id="principal">
+        <a style="font-size: 90px; "href="https://wa.me/+34695863200?text=[message-url-encoded]">Send Message</a>
     </div>
 </body>
 
