--- a/schedule.html
+++ b/schedule.html
@@ -41,6 +41,24 @@
           </div>
     </div>
     <div id="principal">
+        <div id="texto-location">
+            <div class="texto-informacion">
+                Planning
+            </div>
+            <div class="texto-descripcion">
+                <p>*14:00h - Entrada invitados con habitación en Aldea Santillana</p>
+                <p>18:30h - Recepción invitados con precóctel</p>
+                <p>19:30h - Ceremonia Civil</p>
+                <p>20:00h - Fotos</p>
+                <p>20:30h - Cóctel</p>
+                <p>22:00h - Banquete</p>
+                <p>01:00h - Discoteca</p>
+                <p>05:00h - Despedida</p>
+            </div>
+        </div>
+        <div id="principal-right">
+            <img src="./images/capellania.jpg">
+        </div>
     </div>
 </body>
 
