added contacts page

--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,31 @@
             </div>
           </div>
     </div>
-    <div id="principal">
-        <a style="font-size: 90px; "href="https://wa.me/+34695863200?text=[message-url-encoded]">Send Message</a>
+    <div id="principal-rrss">
+        <div id="rrss-header">
+            <h1>Por favor, rogamos confirmación</h1>
+            <h4>Si tenéis alguna intolerancia o algún comentario, hacednoslo saber</h4>
+        </div>
+        <div class="rrss" style="grid-area: rrssSandra;">
+            <img class="foto-rrss" src="./images/youngSandra.png">
+            <div class="texto-informacion">
+                <p>Teléfono: 680 39 00 85</p>                                
+                <button class="boton-rrss" type="button" onclick="location.href='https://wa.me/+34680390085?text=Hola%21%20Confirmamos%20nuestra%20asistencia%20a%20la%20boda%20%3AD'">Confirmar asistencia a Sandra</button>
+                <button class="boton-instagram" type="button" onclick="location.href='https://www.instagram.com/san.alcon'" >Instagram: @san.alcon</button>                
+            </div>            
+        </div>
+        <div class="rrss" style="grid-area: rrssDiego;">
+            <img class="foto-rrss" src="./images/fotoBroma.jpg">
+            <div class="texto-informacion">
+                <p>Teléfono: 695 86 32 00</p>                     
+                <button class="boton-rrss" type="button" onclick="location.href='https://wa.me/+34695863200?text=Hola%21%20Confirmamos%20nuestra%20asistencia%20a%20la%20boda%20%3AD'">Confirmar asistencia a Diego</button>
+                <button class="boton-instagram" type="button" onclick="location.href='https://www.instagram.com/diegobravo2'" >Instagram: @diegobravo2</button>
+            </div>            
+        </div>
+        <div id="rrss-footer">
+            <p>No olvidéis seguirnos y etiquetarnos en vuestras fotos el día de la boda</p>
+        </div>
+        
     </div>
 </body>
 
