--- a/schedule.html
+++ b/schedule.html
@@ -45,6 +45,9 @@
             <div class="texto-informacion">
                 Planning
             </div>
+            <div class="texto-destacado">
+                Recepción, ceremonia, banquete y fiesta se celebrará en Capellanía 
+            </div>
             <div class="texto-descripcion">
                 <p>*14:00h - Entrada invitados con habitación en Aldea Santillana</p>
                 <p>18:30h - Recepción invitados con precóctel</p>
