changes photo and adjust

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             </div>            
         </div>
         <div class="rrss" style="grid-area: rrssDiego;">
-            <img class="foto-rrss" src="./images/fotoBroma.jpg">
+            <img class="foto-rrss" src="./images/youngDiego.png">
             <div class="texto-informacion">
                 <p>Teléfono: 695 86 32 00</p>                     
                 <button class="boton-rrss" type="button" onclick="location.href='https://wa.me/+34695863200?text=Hola%21%20Confirmamos%20nuestra%20asistencia%20a%20la%20boda%20%3AD'">Confirmar asistencia a Diego</button>
@@ -62,7 +62,9 @@
             </div>            
         </div>
         <div id="rrss-footer">
-            <p>No olvidéis seguirnos y etiquetarnos en vuestras fotos el día de la boda</p>
+            <p>No olvidéis seguirnos y etiquetarnos en vuestras fotos el día de la boda</p>            
+            <p>Y si tienes curiosidad de conocer como hemos desarrollado esta página, puedes acceder a través del siguiente enlace en Github</p>
+            <button class="boton-github" type="button" onclick="location.href='https://github.com/Diegojnb/MyWeeding'" >Github</button>
         </div>
         
     </div>
