--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,9 @@
         </div>
         <div id="rrss-footer">
             <p>No olvidéis seguirnos y etiquetarnos en vuestras fotos el día de la boda</p>            
-            <p>Y si tienes curiosidad de conocer como hemos desarrollado esta página, puedes acceder a través del siguiente enlace en Github</p>
-            <button class="boton-github" type="button" onclick="location.href='https://github.com/Diegojnb/MyWeeding'" >Github</button>
+            <hr class="separator">
+            <p>Y si tienes curiosidad de conocer como hemos desarrollado esta página, puedes acceder a través del siguiente enlace</p>
+            <button class="boton-github" type="button" onclick="location.href='https://github.com/Diegojnb/MyWeeding'">Github</button>
         </div>
         
     </div>
