--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
               <span>
                 <h3>
                     <ul class="link-list-collapse">
-                        <li class="li-collapse"><a id="index" class="links-top">¡Bienvenidos!</a></li>
-                        <li class="li-collapse"><a id="schedule" class="links-top">Planning</a></li>
-                        <li class="li-collapse"><a id="location"  class="links-top">¿Cómo llego?</a></li>
-                        <li class="li-collapse"><a id="contact" class="links-top">Contáctanos</a></li>
+                        <li class="li-collapse"><a id="index-phone" class="links-top">¡Bienvenidos!</a></li>
+                        <li class="li-collapse"><a id="schedule-phone" class="links-top">Planning</a></li>
+                        <li class="li-collapse"><a id="location-phone" class="links-top">¿Cómo llego?</a></li>
+                        <li class="li-collapse"><a id="contact-phone" class="links-top">Contáctanos</a></li>
                     </ul>
                 </h3>                
             </div>
