--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <div id="principal-rrss">
     <div id="rrss-header">
         <h1>Por favor, rogamos confirmación</h1>
-        <h4>Si tenéis alguna intolerancia o algún comentario, hacednoslo saber</h4>
+        <h4>Si tenéis alguna intolerancia o algún comentario, hacérnoslo saber</h4>
     </div>
     <div class="rrss" style="grid-area: rrssSandra;">
         <img class="foto-rrss" src="./images/youngSandra.png">
