--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <div id="principal-rrss">
     <div id="rrss-header">
-        <h1>Por favor, rogamos confirmación</h1>
-        <h4>Si tenéis alguna intolerancia o algún comentario, hacérnoslo saber</h4>
+        <h1>Por favor, rogamos confirmación.</h1>
+        <h4>Si tenéis alguna intolerancia o algún comentario, hacérnoslo saber.</h4>
     </div>
     <div class="rrss" style="grid-area: rrssSandra;">
         <img class="foto-rrss" src="./images/youngSandra.png">
@@ -20,8 +20,8 @@
         </div>            
     </div>
     <div id="rrss-footer">
-        <p>No olvidéis seguirnos y etiquetarnos en vuestras fotos el día de la boda</p>            
-        <p>Y si tienes curiosidad de conocer como hemos desarrollado esta página, puedes acceder a través del siguiente enlace</p>
+        <p>No olvidéis seguirnos y etiquetarnos en vuestras fotos el día de la boda.</p>            
+        <p>Y si tienes curiosidad de conocer como hemos desarrollado esta página, puedes acceder a través del siguiente enlace:</p>
         <button class="boton-github" type="button" onclick="location.href='https://github.com/Diegojnb/MyWeeding'">Github</button>
     </div>  
     
