--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
         Planning
     </div>
     <div class="texto-destacado">
-        Recepción, ceremonia, banquete y fiesta se celebrará en Capellanía 
+        Recepción, ceremonia, banquete y fiesta se celebrará en Capellanía. 
     </div>
     <div class="texto-descripcion">
         <p>*14:00h - Entrada invitados con habitación en Aldea Santillana</p>
