--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>    
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="./code/code.js"></script>    
     <script src="./code/carousel.js"></script>
 </head>
