close navigator on change, center button github and fix size navigator on page != main

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div id="rrss-footer">
         <p>No olvidéis seguirnos y etiquetarnos en vuestras fotos el día de la boda.</p>            
         <p>Y si tienes curiosidad de conocer como hemos desarrollado esta página, puedes acceder a través del siguiente enlace:</p>
-        <button class="boton-github" type="button" onclick="location.href='https://github.com/Diegojnb/MyWeeding'">Github</button>
+        <div id="container-github"><button class="boton-github" type="button" onclick="location.href='https://github.com/Diegojnb/MyWeeding'">Github</button></div>
     </div>  
     
 </div>
