--- a/main.html
+++ b/main.html
@@ -27,16 +27,15 @@
                     ¡Bienvenidos a nuestra boda!
                 </div>
                 <div class="texto-descripcion">
-                    <p>¡Que sí! Que nos casamos!!!</p>
-                    <p>¡Estamos super felices! Nos sentimos en las nubes y queremos
+                    <p>¡Que sí! ¡¡¡Que nos casamos!!!</p>
+                    <p>¡Estamos superfelices! Nos sentimos en las nubes y queremos
                         compartir contigo todo nuestro amor. Por eso estamos preparando
                         una boda que hará historia y en la que te lo pasarás genial.</p>
                     <p>Mientras llega el gran día hemos creado esta web con un montón de
                         secciones para que estés al día de todo y para compartir nuestra
                         historia de amor.</p>
-                    <p>Una cosa importante, en la sección asistencia puedes confirmar si
-                        vas a la boda o no. Confírmanos lo antes posible por favor, que
-                        así organizarlo todo nos será muchos más fácil.</p>
+                    <p>Una cosa importante, necesitamos confirmación de asistencia. Avisadnos lo antes posible, por favor, que
+                        así organizarlo todo nos será mucho más fácil. ¡Ah! ¡No os olvidéis de ir avisándonos de intolerancias, alergias o menús especiales (Vegetarianos, veganos, etc.)! </p>
                     <p>Disfruta la web y nos vemos muy pronto, mil besos!</p>
                 </div>
             </div>
